--- a/visualization/app/codeCharta/ui/viewCube/viewCube.component.scss
+++ b/visualization/app/codeCharta/ui/viewCube/viewCube.component.scss
@@ -6,6 +6,6 @@
     top: 10px;
 
     &.sideBarVisible {
-        right: 350px;
+        right: 320px;
     }
 }
